Library(arithmetic): new size operator for dataset's dimensions size
The size operator prints the size of a dataset/HDU along a given
dimension. This only needs the metadata to operate, which improves its
efficiency.

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ bin/buildprog/astbuildprog.conf
 # directory, we have abandoned the convention above.
 
 /bootstrapped/build-aux
+
+# vscode
+.vscode/
