Library (wcs) and Fits program: converting between WCS distortions
The WCS standard has historically had several types of distortions and in
many scenaios it is necessary to convert between them. With this commit, an
internal 'wcsdistortion' library has been added to Gnuastro for the job and
some high-level functions have been added to 'wcs.h' to make it easy to
interact with the low-level features.

To enable easy command-line access to the WCS distortion conversions the
'--wcsdistortion' option has been added to the 'astfits' program. When
given this function, the program will convert the input HDU's WCS
distortion into a the desired type. Currently only the conversion between
TPV to SIP is supported.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -62,7 +62,7 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
   interpolate.c jpeg.c label.c list.c match.c options.c pdf.c              \
   permutation.c pointer.c polygon.c qsort.c dimension.c speclines.c        \
   statistics.c table.c tableintern.c threads.c tiff.c tile.c               \
-  tile-internal.c timing.c txt.c type.c units.c wcs.c
+  tile-internal.c timing.c txt.c type.c units.c wcs.c wcsdistortion.c
 
 
 
@@ -109,7 +109,8 @@ EXTRA_DIST = gnuastro.pc.in $(headersdir)/README $(internaldir)/README  \
   $(internaldir)/checkset.h $(internaldir)/commonopts.h                 \
   $(internaldir)/config.h.in $(internaldir)/fixedstringmacros.h         \
   $(internaldir)/options.h $(internaldir)/tableintern.h                 \
-  $(internaldir)/tile-internal.h $(internaldir)/timing.h
+  $(internaldir)/tile-internal.h $(internaldir)/timing.h                \
+  $(internaldir)/wcsdistortion.h
 
 
 
