Fits: --wcsdistortion with no data HDUs, no crash on old WCSLIB
Until now, when the input FITS header given to the '--wcsdistortion' option
didn't have any data, it would crash, complaining about this! But WCS
distortions are may be stored in FITS HDUs that don't have any data (and
infact this is what happens with astrometry.net for example). Hence it was
necessary to account for this scenario.

To enable this, with this commit, a library function 'gal_wcs_write' was
added to only write the WCS-related keywords in a data-free FITS header and
the necessary checks were placed to avoid reading data when there isn't
any.

In the process (on the same branch that this commit was "rebase"d from),
the following corrections are also made:

 - gcc allows 2D matrix declaration and initialiasation in the form
   `array[i][j]={0}` but clang raises warning for they same. To provide
   uniformity we used nessted loops to initialise these 2D matrices.

 - Until now we were assuming that the user's 'wcsprm' structure has an
   'mjdref' element, but after testing on a system with WCSLIB 5.17, we
   noticed that this element is a relatively recent addition to the
   'wcsprm' structure (it wasn't present in that version). So with this
   commit, a configure-time check has been added so if the host's WCSSLIB
   doesn't have this structure, it isn't used.

 - On WCSLIB 5.17, we also noticed that 'dpkeyd' also doesn't exist, thus
   causing an error during compilation. We thus don't use it any more. It
   was mainly used for extra error check and after a discussion was
   scraped.

 - Until now, we always assumed that WCSLIB has the 'dis.h' header for
   distortion-related operations. But this is not always the case and older
   versions of WCSLIB don't have it. This could cause problems in the
   build. With this commit, configure-time checks have been added to see if
   'dis.h' is present on the host or not. If it isn't the respective
   functions will print an informative error and abo

--- a/configure.ac
+++ b/configure.ac
@@ -444,6 +444,23 @@ AC_DEFINE_UNQUOTED([GAL_CONFIG_HAVE_WCSLIB_VERSION], [$has_wcslib_version],
 AC_SUBST(HAVE_WCSLIB_VERSION, [$has_wcslib_version])
 
 
+# If the WCS library supports distortion
+AC_CHECK_HEADER([wcslib/dis.h], [has_wcslib_dis_h=1],
+                [has_wcslib_dis_h=0; anywarnings=yes])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_HAVE_WCSLIB_DIS_H], [$has_wcslib_dis_h],
+                   [WCSLIB has distortion header in dis.h])
+AC_SUBST(HAVE_WCSLIB_DIS_H, [$has_wcslib_dis_h])
+AM_CONDITIONAL([COND_HASWCSDIS_H], [test "x$has_wcslib_dis_h" = "x1"])
+
+
+# If the WCS library has the 'mjdref' element.
+AC_CHECK_MEMBER([struct wcsprm.mjdref], [has_wcslib_mjdref=1],
+                [has_wcslib_mjdref=0], [[#include <wcslib/wcs.h>]])
+AC_DEFINE_UNQUOTED([GAL_CONFIG_HAVE_WCSLIB_MJDREF], [$has_wcslib_mjdref],
+                   [WCSLIB comes with wcsprm.mjdref])
+AC_SUBST(HAVE_WCSLIB_MJDREF, [$has_wcslib_mjdref])
+
+
 # If the pthreads library has 'pthread_barrier_wait'.
 AC_CHECK_LIB([pthread], [pthread_barrier_wait], [has_pthread_barrier=1],
              [has_pthread_barrier=0])
@@ -976,6 +993,15 @@ AS_IF([test x$enable_guide_message = xyes],
                AS_ECHO(["    have less functionality afterwards. We thus recommend building"])
                AS_ECHO(["    and installing a more recent version of GSL (version >= 2.0,"])
                AS_ECHO(["    released in October 2015)."])
+               AS_ECHO([]) ])
+
+        AS_IF([test "x$has_wcslib_dis_h" = "x0"],
+              [dependency_notice=yes
+               AS_ECHO(["  - WCSLIB (https://www.atnf.csiro.au/people/mcalabre/WCS) version"])
+               AS_ECHO(["    on this system doesn't support distortions (i.e., it doesn't"])
+               AS_ECHO(["    have 'dis.h'. This build won't crash but Gnuastro will not be able"])
+               AS_ECHO(["    to do distortion-related operations. If you don't need such"])
+               AS_ECHO(["    operations you can ignore this warning."])
                AS_ECHO([]) ])
 
         AS_IF([test "x$has_libjpeg" = "xno"],
