Library (kdtree.h): installation typo fixed in lib/Makefile.am
When adding the installation instructions for the new k-d tree library, I
had mistakenly just copied the 'jpeg.h' header and forgot to correct it to
'kdtree.h'. This is now corrected.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -85,7 +85,7 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h \
   $(headersdir)/box.h $(headersdir)/convolve.h $(headersdir)/cosmology.h \
   $(headersdir)/data.h $(headersdir)/dimension.h $(headersdir)/eps.h \
   $(headersdir)/fits.h $(headersdir)/git.h $(headersdir)/interpolate.h \
-  $(headersdir)/jpeg.h $(headersdir)/jpeg.h $(headersdir)/label.h \
+  $(headersdir)/jpeg.h $(headersdir)/kdtree.h $(headersdir)/label.h \
   $(headersdir)/list.h $(headersdir)/match.h $(headersdir)/pdf.h \
   $(headersdir)/permutation.h $(headersdir)/pointer.h $(headersdir)/polygon.h \
   $(headersdir)/qsort.h $(headersdir)/speclines.h $(headersdir)/statistics.h \
