Query: functions for querying Gaia moved to gaia.c
So far, the only database that 'astquery' can submit queries to is
Gaia. Because of this, the functions to work on the Gaia catalog were
defined in the core `query.c' file. However, we will soon be adding many
more databases, and its hard to manage them all in one file.

With this commit, to allow easy addition of new databases, the Gaia-specfic
functions have been moved to 'gaia.c' and 'gaia.h'.

--- a/bin/query/Makefile.am
+++ b/bin/query/Makefile.am
@@ -39,9 +39,9 @@ bin_PROGRAMS = astquery
 astquery_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro \
                  $(MAYBE_NORPATH)
 
-astquery_SOURCES = main.c ui.c query.c
+astquery_SOURCES = main.c ui.c query.c gaia.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h query.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h query.h gaia.h
 
 
 
