Library (data.h): arrays first loaded in RAM, then as mmap'd files
Until now, an internal array was only allocated in the RAM when its size
was smaller (in bytes) than the value given to the '--minmapsize'
option. But this was annoying/buggy when the system has enough RAM to keep
large files.

With this commit, all Gnuastro programs will first attempt to write the
array in RAM, only when it fails (there is no more RAM left), will they use
a memory-mapped file (which can dramatically slow down the program). This
has been done by setting the default value to '--minmapsize' to an
extremely large value, but adding a check after attempting to allocate the
file. If the allocation fails, a memory-mapped file will be created.

In the process, I also noticed that the arithmetic multi-operand operators
for quantile and sigma-clipping weren't actually freeing one of their
internal arrays, causing some wasted program memory. This has been
corrected.

This issue was found thanks to the Euclid OU-MER team and in particular
on data provided by Martin Kuemmel.

--- a/bin/gnuastro.conf
+++ b/bin/gnuastro.conf
@@ -39,4 +39,13 @@
 
 # Operating mode
  quietmmap        0
- minmapsize       2000000000
+
+ # The default 'minmapsize' is set to the maximum possible value for signed
+ # 64-bit integers (half the full logical size of a 64-bit system, which is
+ # larger than 9 x 10^18 bytes). Effectively, this means that forced
+ # memory-mapping will be disabled. Therefore memory-mapping will only
+ # happen when memory cannot be allocated with the RAM (for any reason,
+ # mainly not having enough space). On 32-bit systems, this will
+ # automatically be read by the C library as the largest possible memory in
+ # those systems (~4.3 x 10^9 bytes).
+ minmapsize       9223372036854775807
