Installation: temporary configuration test files added to .gitignore
When you run './configure', the script makes temporary files for the
various tests, but until this commit, these files were not ignored by Git.
I noticed this after aborting the configuration and then I noticed the
existance of these files. But they do not have to be taken into account by
Git.

With this commit, they have been added to '.gitignore' so they don't annoy
anyone else.

--- a/.gitignore
+++ b/.gitignore
@@ -100,10 +100,13 @@ astmknoise
 config.sub
 install-sh
 aclocal.m4
+confdefs.h
+conftest.c
 astconvertt
 astconvolve
 test-driver
 config.h.in
+conftest.err
 lib/config.h
 astcosmiccal
 astmkcatalog
