Build: CPPFLAGS now includes built bootstrap directory
Until now, in the 'Makefile.am' of each program and the libraries,
'CPPFLAGS' was only looking into the bootstrapped source directory for
headers. However, after a recet bootstrap of Gnulib (where 'error.h' and
'argp.h' depended on 'stdio.h') in my normal test builds (where the source
and build directories are different) many compiler warnings suddenly popped
up, saying that ‘_GL_ATTRIBUTE_SPEC_PRINTF_SYSTEM’ is an unrecognized
format function type.

With the help of Paul Eggert and Bruno Haible from Gnulib, I found out that
the problem is that Gnulib's 'stdio.h' is actully a built file that is
customized for the running system. So its not in the source directory and
the compiler was actually using my OS's 'stdio.h'.

With this commit, to fix the problem, an explicit '-I' is now added to all
the 'AM_CPPFLAGS' of all the programs and libraries, telling them to first
look into the built bootstrap directory, then the source directory, and
finally Gnuastro's own library directory. This fixed all the warnings.

This bug would only happen when the source and build directories were
different. So it won't affect most users who just build in the source
directory.

--- a/bin/TEMPLATE/Makefile.am
+++ b/bin/TEMPLATE/Makefile.am
@@ -20,8 +20,10 @@
 
 
 ## Necessary pre-processer and linker flags.
-AM_LDFLAGS = -L\$(top_builddir)/lib
-AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib -I\$(top_srcdir)/lib
+AM_LDFLAGS  = -L\$(top_builddir)/lib
+AM_CPPFLAGS = -I\$(top_builddir)/bootstrapped/lib \
+              -I\$(top_srcdir)/bootstrapped/lib \
+              -I\$(top_srcdir)/lib
 
 if COND_NORPATH
   MAYBE_NORPATH = $(CONFIG_LDADD)
