Bootstrapping: images made similar to info or man pages
Until now, we were building the images that go into the webpage and PDF
book at the end of the 'bootstrap' script. But the bootstrap script is
primarily for core programming components of Gnuastro. However, images in
the book are like the man pages or info pages that should be built from the
version controlled source and inserted into the tarball.

With this commit, the call to build the images is now done within
'doc/Makefile.am' step (during the 'make' phase, if they don't exist). But
the images are already packaged into the tarball, so they won't cause a
problem for a user unpacking the tarball.

Also, while cleaning 'boostrap.conf', I noticed that the 'fdl' package is
suggesting to include 'fdl.texi' in the version controlled source. So this
is also done in this commit.

This was suggested by Bruno Haible.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -1,18 +1,10 @@
 # Bootstrap configuration for GNU Astronomy Utilities
 #
-# This file will be read by the ./bootstrap script and everything that
-# is defined here will be replaced with the variables defined
-# there. ./bootstrap is a script made by Gnulib in order to run Gnulib
-# and any other operation that is necessary to do on the version
-# controlled source prior to running ./configure.
-#
-# IMPORTANT NOTE(s) FOR GNUASTRO:
-#
-#    - We have separated the variables defined here into three
-#      categories as clearly seen below. The main reason is that if
-#      Gnulib's template bootstrap.conf ever changes in the future, we
-#      know exactly which parts we have modified for Gnuastro and so,
-#      we can easily update this template.
+# This file will be read by the './bootstrap' script and everything that is
+# defined here will be replaced with the variables defined
+# there. ./bootstrap is a script made by Gnulib in order to run Gnulib and
+# any other operation that is necessary to do on the version controlled
+# source prior to running ./configure.
 #
 # Original author:
 #     Mosè Giordano <mose@gnu.org>
@@ -188,25 +180,6 @@ bootstrap_post_import_hook()
 
 
 
-# Run other necessary operations after all the default bootstrap
-# operations are complete.
-bootstrap_epilogue()
-{
-  # Prepare all the figure formats for the various manual formats.
-  cd doc/plotsrc
-  make
-  cd ../../
-}
-
-
-
-
-
-
-
-
-
-
 # Configuration variable values for Gnuastro
 # ==========================================
 #
@@ -216,7 +189,6 @@ bootstrap_epilogue()
 
 # gnulib modules used by this package.
 gnulib_modules="
-    fdl
     func
     math
     argp
