Bootstrap: removed dependency on configure script to build images
In the previous commit, where building images has been moved to
'doc/Makefile.am', I had set the building of images to be dependent on the
'configure' script. But that is not the case here (unlike
'authors.texi'). As a result, the tarball wouldn't work.

With this commit, the images don't depend on anything. If they exist, they
will not be rebuilt, and if they don't, they will.

This bug was reported by Samane raji

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -72,7 +72,7 @@ $(srcdir)/authors.texi: $(top_srcdir)/configure
 
 ## Build the images of the book (with one chosen as representative to act
 ## as a target in Make).
-$(imgrepresentative): $(top_srcdir)/configure
+$(imgrepresentative):
 	cd $(top_srcdir)/doc/plotsrc; make
 
 ## Images and their directories.
